--- a/ansible/roles/centos/templates/etcd.j2
+++ b/ansible/roles/centos/templates/etcd.j2
@@ -9,12 +9,16 @@ User=etcd
 Environment=ETCD_NAME=%H
 Environment=ETCD_DATA_DIR=/var/lib/etcd
 Environment=ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379,http://0.0.0.0:4001
+{% if etcd_member %}
 Environment=ETCD_INITIAL_CLUSTER_TOKEN=etcd-cluster-1
-Environment=ETCD_INITIAL_ADVERTISE_PEER_URLS=http://0c-c4-7a-15-e1-9c:2380
-Environment=ETCD_LISTEN_PEER_URLS=http://0c-c4-7a-15-e1-9c:2380,http://0c-c4-7a-15-e1-9c:7001
-Environment=ETCD_ADVERTISE_CLIENT_URLS=http://0c-c4-7a-15-e1-9c:2379
+Environment=ETCD_INITIAL_ADVERTISE_PEER_URLS=http://{{ groups['master'][0] }}:2380
+Environment=ETCD_LISTEN_PEER_URLS=http://{{ groups['master'][0] }}:2380,http://{{ groups['master'][0] }}:7001
+Environment=ETCD_ADVERTISE_CLIENT_URLS=http://{{ groups['master'][0] }}:2379
 Environment=ETCD_INITIAL_CLUSTER_STATE=new
-Environment=ETCD_INITIAL_CLUSTER=0c-c4-7a-15-e1-9c=http://0c-c4-7a-15-e1-9c:2380
+{% else %}
+Environment=ETCD_PROXY=on
+{% endif %}
+Environment=ETCD_INITIAL_CLUSTER={{ groups['master'][0] }}=http://{{ groups['master'][0] }}:2380
 ExecStart=/usr/bin/etcd
 Restart=always
 RestartSec=10s
