--- a/ansible/roles/worker/templates/worker-kubeconfig.j2
+++ b/ansible/roles/worker/templates/worker-kubeconfig.j2
@@ -3,6 +3,7 @@ kind: Config
 clusters:
 - name: local
   cluster:
+    server: https://{{ groups['master'][0] }}:443
     certificate-authority: /etc/kubernetes/ssl/ca.pem
 users:
 - name: kubelet
