--- a/ansible/roles/centos/templates/flanneld.j2
+++ b/ansible/roles/centos/templates/flanneld.j2
@@ -17,11 +17,7 @@ EnvironmentFile=-/etc/sysconfig/docker-network
 ExecStartPre=/usr/bin/etcdctl set /flannel/network/config '{ "Network": "10.1.0.0/16", "Backend": {"Type": "{{ flannel_backend }}" }}'
 {% endif %}
 
-{% if flannel_iface is defined %}
-ExecStart=/usr/bin/flanneld -etcd-endpoints=http://{{ groups['master'][0] }}:2379 -etcd-prefix=/flannel/network $FLANNEL_OPTIONS -iface={{ flannel_iface }}
-{% else %}
-ExecStart=/usr/bin/flanneld -etcd-endpoints=http://{{ groups['master'][0] }}:2379 -etcd-prefix=/flannel/network $FLANNEL_OPTIONS
-{% endif %}
+ExecStart=/usr/bin/flanneld -etcd-endpoints=http://{{ groups['master'][0] }}:2379 -etcd-prefix=/flannel/network $FLANNEL_OPTIONS -iface={{ ansible_default_ipv4.alias }}
 
 ExecStartPost=/usr/libexec/flannel/mk-docker-opts.sh -k DOCKER_NETWORK_OPTIONS -d /run/flannel/docker
 Restart=always
