--- a/ansible/roles/master/templates/kube-addons-service.j2
+++ b/ansible/roles/master/templates/kube-addons-service.j2
@@ -4,13 +4,15 @@ After=kubelet.service
 Requires=kubelet.service
 
 [Service]
-ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/addons
-ExecStartPre=/usr/bin/wget -P /etc/kubernetes/addons/ http://bootstrapper/static/addons-config/*.yaml
+ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/addons && /usr/bin/wget -P /etc/kubernetes/addons/ http://bootstrapper/static/addons-config/*.yaml
+ExecStartPre=/usr/bin/docker rm -f kube-addon-manager
 
 # depend on /etc/kubernetes/config/addons-manger.yaml file
 ExecStart=/usr/bin/docker run --rm --net=host --name=kube-addon-manager\
+  -v /etc/kubernetes/ssl/:/etc/kubernetes/ssl/ \
   -v /etc/kubernetes/addons/:/etc/kubernetes/addons/  \
-  -e KUBECTL_OPTS=--server=http://{{ groups['master'][0]  }}:8080 \
+  -v /etc/kubernetes/config/addons-manager.yaml:/etc/kubernetes/config/addons-manager.yaml \
+  -e KUBECTL_OPTS=--kubeconfig=/etc/kubernetes/config/addons-manager.yaml \
   {{ docker_domain }}:5000/{{ images_addon_manager }}
 
 [Install]
