--- a/ansible/roles/master/templates/kubernetes-master-manifest.j2
+++ b/ansible/roles/master/templates/kubernetes-master-manifest.j2
@@ -37,7 +37,7 @@ spec:
         - --secure-port=443
         - --etcd-servers=http://{{ groups['master'][0] }}:2379
         - --service-cluster-ip-range={{ service_cluster_ip_range }}
-        - --admission-control=NamespaceLifecycle,NamespaceExists,LimitRanger,SecurityContextDeny,ServiceAccount,ResourceQuota
+        - --admission-control=NamespaceLifecycle,LimitRanger,ServiceAccount,PersistentVolumeLabel,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds
         - --service-account-key-file=/etc/kubernetes/ssl/apiserver-key.pem
         - --tls-private-key-file=/etc/kubernetes/ssl/apiserver-key.pem
         - --tls-cert-file=/etc/kubernetes/ssl/apiserver.pem
